// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <span
      class="sc-ivTmOn dNJphr sc-llJcti DBbdK sc-jIAOiI kBDhbd sc-ZyCDH deuHmg"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <span
      class="sc-ivTmOn dNJphr sc-llJcti cYBrip sc-jIAOiI kBDhbd sc-ZyCDH iUGlsz"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
